# finance-api

./: .gitignore  Cargo.toml  sqlite3.db
src/: main.rs  models.rs  schema.rs  services.rs
